hphp/test/slow/dict/struct-dict-mutate-bug.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/struct-dict-mutate-bug.php on line 14